# semantic-router

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  R770-Semantic-Router-Blog-Post.docx  README.md  Semantic-Router-White-Paper.docx  pyproject.toml  semantic_router_blog_dell.docx  semantic_router_whitepaper.docx  semantic_router_whitepaper_dell.docx  wrangler.jsonc  ~$mantic-Router-White-Paper.docx
config/: cloudflared.example.yml  gateway_roles.yaml  gold.yaml  judge.yaml  live_demo.json  local_models.yaml  models.yaml  router-backends.yaml  router-exemplars.yaml  router.yaml  scoring.yaml  vllm-sr.routing.yaml  vllm-sr.yaml
config/tiers/: README.md  tier1.yaml  tier2.yaml  tier3.yaml  tier4.yaml  tier5.yaml
data/: Semantic_router.json  queries.json  queries.yaml
data/external_answers/: tier3.md  tier4.md
demo/: demo.css  demo.js  index.html  pricing.json
docs/: DEPLOY_INTERACTIVE.md  history.md  semantic-router-whitepaper.html
interactive/: app.css  app.js  config.default.json  index.html
src/benchmark/: answers.py  build_router_config.py  cli.py  config.py  db.py  evaluations.py  export.py  gold.py  import_answers.py  judge.py  load.py  misroutes.py  pass1.py  pass2.py  report.py  review.py  router_client.py  router_config.py  router_proc.py  runs.py  scores.py  seed.py  start_llm.py  tiers.py  update_gold.py
tests/: _helpers.py  test_answers.py  test_build_demo_data.py  test_evaluations.py  test_export.py  test_gold.py  test_import_answers.py  test_interactive_server.py  test_judge.py  test_load.py  test_misroutes.py  test_pass1.py  test_passes.py  test_report.py  test_review.py  test_router_client.py  test_router_gateway.py  test_router_proc.py  test_runs.py  test_scores.py  test_seed.py  test_shipped_configs.py  test_start_llm.py  test_tiers.py  test_update_gold.py
tools/: build_demo_data.py  build_demo_site.sh  demo_server.py  interactive_server.py  normalize_evaluations.py  oai_mock.py  router_gateway.py
