[project]
name = "semantic-router-benchmark"
version = "0.0.0"
description = "Benchmark harness for the vLLM Semantic Router"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
benchmark = "benchmark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: Typer's idiomatic API uses typer.Option(...) in default args.
# SIM115: router_proc.py intentionally holds an open file handle for the
#         subprocess lifetime; closing it in stop() is correct.
# SIM117: combining patch() context managers reduces readability for tests
#         where each patch documents one mocked seam.
ignore = ["B008", "SIM115", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
