[project]
name = "semantic-router-benchmark"
version = "0.1.0"
description = "Reproducible benchmark harness for the vLLM Semantic Router — drives a curated query set through the router, captures per-tier answers, and emits a single JSON artifact for downstream replay + judging."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["vllm", "llm", "routing", "benchmark", "evaluation", "semantic-router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/VPC-DevAdmin/semantic-router"
Repository = "https://github.com/VPC-DevAdmin/semantic-router"
Issues = "https://github.com/VPC-DevAdmin/semantic-router/issues"
"vLLM Semantic Router" = "https://github.com/vllm-project/semantic-router"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]
# Optional: tiktoken gives the demo preprocessor accurate frontier token
# estimates (cl100k_base). Without it, build_demo_data.py falls back to a
# chars/4 heuristic — the demo still builds, just slightly less precise on
# the frontier-cost side.
demo = [
    "tiktoken>=0.7",
]

[project.scripts]
benchmark = "benchmark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: Typer's idiomatic API uses typer.Option(...) in default args.
# SIM115: router_proc.py intentionally holds an open file handle for the
#         subprocess lifetime; closing it in stop() is correct.
# SIM117: combining patch() context managers reduces readability for tests
#         where each patch documents one mocked seam.
ignore = ["B008", "SIM115", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
